--- a/front/src/index.html
+++ b/front/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body>
+<body style="margin: 0">
   <div id="app"></div>
   <div id="modal-root"></div>
   <script src="./index.tsx"></script>
