--- a/front/src/index.html
+++ b/front/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Cake Time!</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
