--- a/front/src/index.html
+++ b/front/src/index.html
@@ -4,6 +4,7 @@
   <title>Cake Time!</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
