feat: add base recipe creation

--- a/front/src/index.html
+++ b/front/src/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Cake Time!</title>
+  <title>localhost</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dosis:300,400,500" rel="stylesheet">
